lab/mongodb/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mongoshell
  labels:
    app: mongoshell
spec:
  restartPolicy: Never
  
  containers:
    - name: mongoshell
      image: docker.io/silviosilva/mongoshell:latest
